--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "school-management-system",
+  "name": "ecommerce-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
