--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.2",
     "next": "13.4.9",
     "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "typescript": "5.1.6",
