--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/lab": "^5.0.0-alpha.138",
     "@mui/material": "^5.14.2",
+    "@mui/x-data-grid": "^6.14.0",
     "@types/node": "20.4.0",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -25,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.3",
     "typescript": "5.1.6",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.4.1"
   }
 }
